# battleship_mcs

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  cleanPWD.sh  demo_app.c  inet.sh
builds/: APP  CLIENT  CLIENT_FINAL  CMakeCache.txt  Makefile  SERVER  cmake_install.cmake
src/: client.c  client_ancien.c  client_louis.c  demo_app.c  logo.txt  serveurEnregistrement.c  test_form.c
src/app_lib/: datastructs.c  dial.c  interface.c  protocol.c  repReq.c
src/app_lib/include/: datastructs.h  dial.h  interface.h  protocol.h  repReq.h
src/game_logic/: affichage.c  client.c  logic.c  main.c  structSerial.c
src/game_logic/include/: affichage.h  bataille_navale.h  logic.h  structSerial.h
src/game_logic/testSerialisation/: testSerial.c
src/inet_lib/: data.c  session.c
src/inet_lib/include/: data.h  session.h
src/interface_lib/: sprite.c
src/interface_lib/include/: sprite.h
src/layers_lib/: data.c  dial.c  logging.c  repReq.c
src/layers_lib/include/: data.h  dial.h  repReq.h
src/logging_lib/: logging.c
src/logging_lib/include/: logging.h
